syntax = "proto3";

package pb;

option go_package = "github.com/kjasn/simple-bank/pb";

message VerifyEmailRequest {
    int64 verify_email_id = 1;
	string secret_code = 2;
}

message VerifyEmailResponse {
    bool is_verified = 1;
}